fixed footer, increased p text size on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,8 @@
      --secondary-blue: #8DBBEB;
      --dark: #2E2E3C;
    }
+   @source inline('scale-y-0', 'scale-y-100', 'opacity-0', 'opacity-100', 'pointer-events-none');
+
    
    @theme {
      --color-primary-blue: var(--primary-blue);
@@ -231,3 +233,42 @@
      }
    }
    
+
+   @media (max-width: 639px) {
+    .reveal-sm {
+      opacity: 0;
+      transform: translateY(30px);
+      transition-property: opacity, transform;
+      transition-duration: 0.7s;
+      transition-timing-function: cubic-bezier(0.22, 1, 0.36, 1);
+      will-change: opacity, transform;
+    }
+  
+    .reveal-sm.active {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .reveal {
+      opacity: 0;
+      transform: translateY(50px);
+      transition-property: opacity, transform;
+      transition-duration: 0.7s;
+      transition-timing-function: cubic-bezier(0.22, 1, 0.36, 1); /* easeOutExpo */
+      will-change: opacity, transform;
+    }
+
+    .reveal-left {
+      opacity: 0;
+      transform: translateX(-50px);
+      transition: opacity 0.8s ease, transform 0.8s ease;
+    }
+    
+    .delay-800  { transition-delay: 0.8s; }
+    .delay-900  { transition-delay: 0.9s; }
+    .delay-1000 { transition-delay: 1s; }
+    
+
+    
+  }
+  
